--- a/index.html
+++ b/index.html
@@ -1,1 +1,54 @@
-<p>Adam Garcia</p>
+<!DOCTYPE HTML>
+
+<html>
+    <head>
+        <title></title>
+    </head>
+
+    <body>
+        <header>
+        <h1>Some Movies I've <i>Watched</i></h1>
+        <p>by Adam J. Garcia</p>
+        </header>
+        <p>Please take some time to review them below.</p>
+        <main>
+            <article>
+                <h2>Star Wars</h2>
+                <img src="images/star_wars.jpg" width="400px" alt="Star Wars">
+                <p>Luke Skywalker joins forces with a Jedi Knight, a cocky pilot, a Wookiee and two droids to save the galaxy from the Empire's world-destroying battle station, while also attempting to rescue Princess Leia from the mysterious Darth Vader. </p>
+                &nbsp;
+            </article>
+            <article>
+                <h2>The Empire Strikes Back</h2>
+                <img src="images/empire.jpg" width="400px" alt="The Empire Strikes Back">
+                <p>After the Rebels are brutally overpowered by the Empire on the ice planet Hoth, Luke Skywalker begins Jedi training with Yoda, while his friends are pursued by Darth Vader. </p>
+                &nbsp;
+            </article>
+            <article>
+                <h2>Return of the Jedi</h2>
+                <img src="images/rotj.jpg" width="400px" alt="Return of the Jedi">
+                <p> After a daring mission to rescue Han Solo from Jabba the Hutt, the Rebels dispatch to Endor to destroy the second Death Star. Meanwhile, Luke struggles to help Darth Vader back from the dark side without falling into the Emperor's trap. </p>
+                &nbsp;
+            </article>
+            <article>
+                <h2>Big Trouble in Little China</h2>
+                <img src="images/big-trouble-in-little-china-quad-poster-m.jpg" width="400px" alt="Big Trouble in Little China">
+                <p>A rough-and-tumble trucker helps rescue his friend's fiancée from an ancient sorcerer in a supernatural battle beneath Chinatown. </p>
+                &nbsp;
+            </article>
+            <article>
+                <h2>Predator</h2>
+                <img src="images/predator.jpg" width="400px" alt="Preadtor">
+                <p>A team of commandos on a mission in a Central American jungle find themselves hunted by an extraterrestrial warrior. </p>
+                &nbsp;
+            </article>
+
+        </main>
+        <footer>
+            <p>copyright &copy 2019 Adam Garcia</p>
+            <p>If you'd like to tell me about movies you've &quot;seen&quot; &amp; &quot;enjoyed&quot;, please contact me by email:</p>
+            <address><a href="mailto:adamdotg@gmail.com">adamdotg@gmail.com</a></address>
+        </footer>
+        
+    </body>
+</html>
